--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 PORT=5000
-POSTGRES_HOST=startup-ems.clqjnrp1hj27.us-east-1.rds.amazonaws.com
+POSTGRES_HOST=localhost
 POSTGRES_USER=postgres
 POSTGRES_DB=ems
 POSTGRES_PASSWORD=123456789
