allowed server to serve static

--- a/server/.env
+++ b/server/.env
@@ -2,6 +2,6 @@ PORT=5000
 POSTGRES_HOST=localhost
 POSTGRES_USER=postgres
 POSTGRES_DB=ems
-POSTGRES_PASSWORD=123456789
+POSTGRES_PASSWORD=1234
 POSTGRES_PORT=5432
 PRIVATE_KEY=secret_key_asdasd
