--- a/server/.gitignore
+++ b/server/.gitignore
@@ -33,3 +33,10 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+.DS_Store
+.env.local
+.env
+.env.development.local
+.env.test.local
+.env.production.local
