--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "@types/aws-sdk": "^2.7.0",
     "@types/multer": "^1.4.7",
     "aws-sdk": "^2.1338.0",
+    "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
