--- a/server/package.json
+++ b/server/package.json
@@ -33,16 +33,20 @@
     "@types/aws-sdk": "^2.7.0",
     "@types/multer": "^1.4.7",
     "aws-sdk": "^2.1338.0",
+    "axios": "^1.3.4",
+    "axios-observable": "^2.0.0",
     "bcryptjs": "^2.4.3",
+    "clarifai": "^2.9.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "googleapis": "^112.0.0",
     "multer": "^1.4.5-lts.1",
+    "nsfai": "^2.0.0",
     "openai": "^3.2.1",
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0",
+    "rxjs": "^7.8.0",
     "sequelize": "^6.28.0",
     "sequelize-typescript": "^2.1.5",
     "swagger-ui-express": "^4.6.0"
