--- a/server/package.json
+++ b/server/package.json
@@ -49,6 +49,7 @@
     "rxjs": "^7.8.0",
     "sequelize": "^6.28.0",
     "sequelize-typescript": "^2.1.5",
+    "socket.io": "^4.6.1",
     "swagger-ui-express": "^4.6.0"
   },
   "devDependencies": {
