--- a/server/package.json
+++ b/server/package.json
@@ -27,11 +27,14 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^10.0.1",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.3.12",
     "@nestjs/sequelize": "^9.0.0",
     "@nestjs/serve-static": "^3.0.0",
     "@nestjs/swagger": "^6.2.1",
+    "@nestjs/websockets": "^9.3.12",
     "@types/aws-sdk": "^2.7.0",
     "@types/multer": "^1.4.7",
+    "@types/socket.io": "^3.0.2",
     "aws-sdk": "^2.1338.0",
     "axios": "^1.3.4",
     "axios-observable": "^2.0.0",
@@ -39,6 +42,7 @@
     "clarifai": "^2.9.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "dotenv": "^16.0.3",
     "googleapis": "^112.0.0",
     "multer": "^1.4.5-lts.1",
     "nsfai": "^2.0.0",
@@ -49,6 +53,7 @@
     "rxjs": "^7.8.0",
     "sequelize": "^6.28.0",
     "sequelize-typescript": "^2.1.5",
+    "socket.io": "^4.6.1",
     "swagger-ui-express": "^4.6.0"
   },
   "devDependencies": {
@@ -67,6 +72,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "29.3.1",
     "prettier": "^2.3.2",
+    "sequelize-cli": "^6.6.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "29.0.3",
