--- a/client/package.json
+++ b/client/package.json
@@ -50,6 +50,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.14.6",
+    "@types/react-simple-maps": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "eslint": "^8.35.0",
@@ -58,6 +59,7 @@
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
+    "react-simple-maps": "^3.0.0",
     "typescript": "^4.9.5"
   }
 }
