--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,14 @@
     "bootstrap": "^5.2.3",
     "dotenv": "^16.0.3",
     "jwt-decode": "^3.1.2",
+    "leaflet": "^1.9.3",
     "mobx": "^6.8.0",
     "mobx-react-lite": "^3.4.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
+    "react-leaflet-cluster": "^2.1.0",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.6.1",
@@ -49,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.3",
     "@types/node": "^18.14.6",
     "@types/react-simple-maps": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
