--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "jwt-decode": "^3.1.2",
     "leaflet": "^1.9.3",
