--- a/client/package.json
+++ b/client/package.json
@@ -64,6 +64,7 @@
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
+    "lodash": "^4.17.21",
     "react-simple-maps": "^3.0.0",
     "typescript": "^4.9.5"
   }
