--- a/server/package.json
+++ b/server/package.json
@@ -22,10 +22,12 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.294.0",
+    "@elastic/elasticsearch": "^8.7.0",
     "@nestjs/axios": "^2.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/elasticsearch": "^9.0.0",
     "@nestjs/jwt": "^10.0.1",
     "@nestjs/microservices": "^9.4.0",
     "@nestjs/platform-express": "^9.0.0",
